# CFML

./: .gitignore  .gitlab-ci.yml  AUTHORS  CFML_MagSymm.f90  CFML_Polar.f90  CFML_chem_scatt.f90  CFML_cryst_types.f90  CFML_form_cif.f90  CFML_io_messwin.f90  CFML_maps.f90  CFML_math_gen.f90  CFML_optimization_lsq.f90  CFML_random.f90  CFML_refcodes.f90  CFML_sym_table.f90  CFML_symmetry.f90  CMakeLists.txt  Cmake_help.inf  README  RERLEASE.md  buildscript.sh  compile_gfortran08.bat  compile_ifort08.bat  gfortran_installation.inf  setup.py  setup_old.py  wfp08_64.bat  wfp_64.bat
CFGL/: WCFGL_Atom_Tree.f90  WCFGL_Atomic_Table.f90  WCFGL_Chull3D.f90  WCFGL_Display.f90  WCFGL_Glatom.f90  WCFGL_Glbond.f90  WCFGL_IO.f90  WCFGL_Matom_Tree.f90  WCFGL_Metrix.f90  WCFGL_Objects_Definition.f90  WCFGL_Poly_Tree.f90  WCFGL_Quaternion.f90  WCFGL_Trackball.f90  comp_ifort_gl_o.bat  comp_lf95_gl_d.bat  comp_lf95_gl_o.bat  crysfgl.lnk
CFML/: CFML_Atom_Mod.f90  CFML_Cryst_Types.f90  CFML_FFT_nF.f90  CFML_ILL_Instrm_data.f90  CFML_IO_Mess.f90  CFML_MagSymm.f90  CFML_Math_3D.f90  CFML_Math_Gen.f90  CFML_Msfac.f90  CFML_Optimization.f90  CFML_Profile_Finger.f90  CFML_Profile_TOF.f90  CFML_SXTAL_geom.f90  CFML_Spher_Harm.f90  CFML_Symmetry.f90  CFML_atom_mod.f90  CFML_bonds_table.f90  CFML_conf_calc.f90  CFML_diffpatt.f90  CFML_geom_calc.f90  CFML_io_messwin.f90  CFML_profile_tof.f90  CFML_reflct_util.f90  CFML_sfac.f90  CFML_string_util.f90  comp_f95_co.bat  comp_gfor_cd.bat  comp_ifort_co.bat  comp_ifort_wo.bat  comp_lf95_cd.bat  comp_lf95_rd.bat  comp_lf95_wd.bat  f2kcli.f90
Compilers/: CompilerFlags.cmake
Docs/: CrysFML_HighLevel_Procedures.info  CrysFML_HighLevel_Procedures.txt
Help/: CrysFML08.chm  crysfml.chm  crysfml.htm
Html/: crysfml.htm
Linux_scripts/: make_crysfgl  make_crysfml
Program_Examples/PowderPattern/: CMakeLists.txt  Laue_powder.f90  Simple_calc_Mag_powder.f90  Simple_calc_powder.f90  SrTiO3.cfl  calc_powder.f90  corr_cells.f90  make_calc_mag_powder.bat  make_calc_powder  make_calc_powder.bat  make_corr_cells.bat  make_plaue.bat  make_simple_calc_powder  make_simple_calc_powder.bat  mfe_msfac.cfl  ponsin.cfl  simple_calc_powder
Program_Examples/ReadNeXuS/: CMakeLists.txt  read_nexus.f90
Python_API/: README
Python_API/Src/: API_Atom_TypeDef.py  API_Crystal.py  API_Crystal_Metrics.py  API_Crystallographic_Symmetry.py  API_Diffraction_Patterns.py  API_Error_Messages.py  API_IO_Formats.py  API_Reflections_Utilities.py  CMakeLists.txt  FortranBindedClass.py  PowderPatternSimulation.py  SymmetryGroups.py  __init__.py
Python_API/Src/Extensions/: API_Atom_TypeDef.f90  API_Crystal_Metrics.f90  API_Crystallographic_Symmetry.f90  API_Diffraction_Patterns.f90  API_Error_Messages.f90  API_IO_Formats.f90  API_Reflections_Utilities.f90  API_Structure_Factors.f90  API_init.f90  CFML_API_Calc_Powder_Pattern.f90  CFML_API_PowderSimulation.f90  form_CIF.f90  powder_generation.f90  symmetry.f90
Scripts/: buildscript.sh  makecrys  makecrys.bat  makecrys64b  makecrysN.bat  makecrys_lin  makecrys_mac  makecrys_mac.sh  makecrys_win.bat  to_unix.bat
Src/: CFML_Atom_Mod.f90  CFML_Atom_TypeDef.f90  CFML_BVS_Energy_Calc.f90  CFML_BVSpar.f90  CFML_Bonds_Table.f90  CFML_Chem_Scatt.f90  CFML_Conf_Calc.f90  CFML_Cryst_Types.f90  CFML_Crystal_Metrics.f90  CFML_Crystallographic_Symmetry.f90  CFML_Diffpatt.f90  CFML_Diffraction_Patterns.f90  CFML_EisPack.f90  CFML_EoS_Mod.f90  CFML_EoS_ModN.f90  CFML_Export_Vtk.f90  CFML_Export_Vtk_LF95.f90  CFML_Extinction_Correction.f90  CFML_FFT.f90  CFML_FFTs.f90  CFML_FlipR_Mod.f90  CFML_Form_CIF.f90  CFML_Geom_Calc.f90  CFML_Geometry_SXTAL.f90  CFML_GlobalDeps_Linux.f90  CFML_GlobalDeps_Linux_Intel.f90  CFML_GlobalDeps_MacOS.f90  CFML_GlobalDeps_MacOS_Intel.f90  CFML_GlobalDeps_Windows.f90  CFML_GlobalDeps_Windows_intel.f90  CFML_GlobalDeps_Windows_intel64.f90  CFML_HDF5.f90  CFML_ILL_Instrm_Data.f90  CFML_ILL_Instrm_Data_LF.f90  CFML_ILL_Instrm_Data_Nexus.f90  CFML_IO_Formats.f90  CFML_IO_Mess.f90  CFML_IO_MessRW.f90  CFML_IO_MessWin.f90  CFML_IO_MessagesRW.f90  (+57 more)
Src/CFGL/: CMakeLists.txt  WCFGL_Atom_Tree.f90  WCFGL_Bond_Tree.f90  WCFGL_Chull3D.f90  WCFGL_Constant.f90  WCFGL_Display.f90  WCFGL_Geometry.f90  WCFGL_Glatom.f90  WCFGL_Glpoly.f90  WCFGL_IO.f90  WCFGL_Matom_Tree.f90  WCFGL_Metrix.f90  WCFGL_Poly_Tree.f90  WCFGL_Quaternion.f90
Src/CFML/: CFML_Atom_Mod.f90  CFML_Bonds_Table.f90  CFML_Chem_Scatt.f90  CFML_Conf_Calc.f90  CFML_Constant.f90  CFML_Cryst_Types.f90  CFML_Diffpatt.f90  CFML_Export_Vtk.f90  CFML_FFT.f90  CFML_FFTs.f90  CFML_Form_CIF.f90  CFML_Geom_Calc.f90  CFML_GlobalDeps.f90  CFML_GlobalDeps_Linux.f90  CFML_GlobalDeps_Linux_Intel.f90  CFML_GlobalDeps_MacOS.f90  CFML_GlobalDeps_Windows.f90  CFML_GlobalDeps_Windows_intel.f90  CFML_ILL_Instrm_Data.f90  CFML_ILL_Instrm_Data_LF.f90  CFML_IO_Mess.f90  CFML_IO_MessRW.f90  CFML_IO_MessWin.f90  CFML_LSQ_TypeDef.f90  CFML_MagSymm.f90  CFML_Maps.f90  CFML_Math_3D.f90  CFML_Math_Gen.f90  CFML_Molecules.f90  CFML_Msfac.f90  CFML_Optimization.f90  CFML_Optimization_LSQ.f90  CFML_Optimization_SAn.f90  CFML_Polar.f90  CFML_Profile_Finger.f90  CFML_Profile_Functs.f90  CFML_Profile_TOF.f90  CFML_Propagk.f90  CFML_Random.f90  CFML_Refcodes.f90  (+8 more)
Src/Scripts/Linux/: load_cfml_exam  load_crysfml  make_crysfgl  make_crysfml
Src/Scripts/MacOS/: make_crysfgl  make_crysfml
Src/Scripts/Windows/: comp_f95_cd.bat  comp_f95_co.bat  comp_g95_cd.bat  comp_g95_co.bat  comp_gfor_cd.bat  comp_gfor_co.bat  comp_ifort_cd.bat  comp_ifort_co.bat  comp_ifort_gl_o.bat  comp_ifort_wd.bat  comp_ifort_wo.bat  comp_lf95_cd.bat  comp_lf95_co.bat  comp_lf95_gl_d.bat  comp_lf95_gl_o.bat  comp_lf95_rd.bat  comp_lf95_ro.bat  comp_lf95_wd.bat  comp_lf95_wo.bat  lib_mod.lnk  lib_modrw.lnk  lib_modw.lnk  make_crysfgl.bat  make_crysfml.bat
SrcCpp/: ArgumentHandler.cpp  ArgumentHandler.h  CMakeLists.txt  DataBloc.cpp  DataBloc.h  DataNexusLib.cpp  DataNexusLib.h  FloatBloc.cpp  FloatBloc.h  HeaderBloc.cpp  HeaderBloc.h  IntegerBloc.cpp  IntegerBloc.h  NameServer.h  NexusToCFML.cpp  NexusToCFML.h  NexusToCFML2.cpp  blosc_filter.c
(+3828 files in other folders)
